--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,8 +13,13 @@
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+
+    <ion-content>
+      <ion-list>
+      <ion-item routerLink="/home" >Home</ion-item>
+      <ion-item routerLink="/producto">Producto</ion-item>
+      <ion-item routerLink="/contact">Contacto</ion-item>
+      </ion-list>
+    </ion-content>
+  
 </ion-content>
