--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,9 +7,9 @@
     </ion-header>
     <ion-content>
       <ion-list>
-      <ion-item routerLink="/home" color="yellow">Home</ion-item>
-      <ion-item routerLink="/producto">Producto</ion-item>
-      <ion-item routerLink="/contact">Contacto</ion-item>
+      <ion-item routerLink="/Categoria" color="yellow">Home</ion-item>
+      <ion-item routerLink="/Producto">Producto</ion-item>
+      <ion-item routerLink="/Cliente">Cliente</ion-item>
       </ion-list>
     </ion-content>
   </ion-menu>
