--- a/src/app/agregarproducto/agregarproducto.page.html
+++ b/src/app/agregarproducto/agregarproducto.page.html
@@ -1,6 +1,8 @@
+
+
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>agregarproducto</ion-title>
+    <ion-title></ion-title>
     <ion-title>{{ edit ? 'Editar ' : 'Agregar '}} Cliente</ion-title>
     <ion-buttons slot="end">
       <ion-button color="danger" (click)="cerrarModal()"> close </ion-button>
@@ -11,51 +13,53 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">agregarproducto</ion-title>
+      <ion-title size="large">Agregar Producto</ion-title>
     </ion-toolbar>
   </ion-header>
   <form [formGroup]="registrarForm" (ngSubmit)="onSubmit()">
     <ion-item>
       <ion-label position="floating">Descripcion</ion-label>
-      <ion-input
-        formControlName="descripcion"
-        [(ngModel)]="datos.descripcion"
-      ></ion-input>
+      <ion-input formControlName="descripcion"></ion-input>
     </ion-item>
     <ng-container *ngFor="let validation of validation_messages.descripcion">
       <small
         class="error-message"
         *ngIf="registrarForm.get('descripcion')?.hasError(validation.type) && (registrarForm.get('descripcion')?.dirty || registrarForm.get('descripcion')?.touched)"
       >
-        {{ validation.message }}</small
-      >
+        {{ validation.message }}
+      </small>
     </ng-container>
     <ion-item>
-      <ion-select formControlName="idcategoria" [(ngModel)]="datos.idcategoria" placeholder="Selecciona una categoría">
+      <ion-select formControlName="idcategoria" placeholder="Selecciona una categoría">
         <ion-select-option *ngFor="let categoria of categorias" [value]="categoria.idcategoria">
-          {{ categoria.descripcion }}
+          {{ categoria.descripcion}}
         </ion-select-option>
       </ion-select>
       <ng-container *ngFor="let validation of validation_messages.idcategoria">
         <small class="error-message" *ngIf="registrarForm.get('idcategoria')?.hasError(validation.type) && (registrarForm.get('idcategoria')?.dirty || registrarForm.get('idcategoria')?.touched)">
-          {{ validation.message }}</small>
+          {{ validation.message }}
+        </small>
       </ng-container>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Precio</ion-label>
-      <ion-input formControlName="precio" [(ngModel)]="datos.precio" ></ion-input>
+      <ion-input formControlName="precio"></ion-input>
     </ion-item>
     <ng-container *ngFor="let validation of validation_messages.precio">
-      <small class="error-message" *ngIf="registrarForm.get('precio')?.hasError(validation.type) && (registrarForm.get('precio')?.dirty || registrarForm.get('precio')?.touched)"> {{ validation.message }}</small>
+      <small class="error-message" *ngIf="registrarForm.get('precio')?.hasError(validation.type) && (registrarForm.get('precio')?.dirty || registrarForm.get('precio')?.touched)">
+        {{ validation.message }}
+      </small>
     </ng-container>
     <ion-item>
       <ion-label position="floating">Cantidad</ion-label>
-      <ion-input formControlName="cantidad" [(ngModel)]="datos.cantidad" ></ion-input>
+      <ion-input formControlName="cantidad"></ion-input>
     </ion-item>
     <ng-container *ngFor="let validation of validation_messages.cantidad">
-      <small class="error-message" *ngIf="registrarForm.get('cantidad')?.hasError(validation.type) && (registrarForm.get('cantidad')?.dirty ||registrarForm.get('cantidad')?.touched)">
-      {{ validation.message }}</small>
+      <small class="error-message" *ngIf="registrarForm.get('cantidad')?.hasError(validation.type) && (registrarForm.get('cantidad')?.dirty || registrarForm.get('cantidad')?.touched)">
+        {{ validation.message }}
+      </small>
     </ng-container>
-    <ion-button [disabled]="!registrarForm.valid" type="submit" expand="block" padding color="primary" class="ion-margin-top">{{ edit ? 'Actualizar ' : 'Guardar'}}</ion-button>
+    <ion-button [disabled]="!registrarForm.valid" type="submit" expand="block" padding color="primary" class="ion-margin-top">{{ edit ? 'Actualizar Producto' : 'Guardar Producto'}}</ion-button>
   </form>
 </ion-content>
+
