--- a/src/app/categoria/categoria.page.html
+++ b/src/app/categoria/categoria.page.html
@@ -3,7 +3,7 @@
   <ion-buttons slot="start">
   <ion-menu-button></ion-menu-button>
   </ion-buttons>
-  <ion-title>Producto</ion-title>
+  <ion-title>Categoria</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -11,7 +11,7 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-    <ion-title>LISTADO DE PRODUCTOS</ion-title>
+    <ion-title>LISTADO DE CATEGORIAS</ion-title>
     </ion-toolbar>
   </ion-header>
   <div id="container">
@@ -24,19 +24,15 @@
              </ion-button >
            </ion-buttons>
         </ion-item>
-        <ion-item-sliding *ngFor="let producto of productos">
+        <ion-item-sliding *ngFor="let categoria of categorias">
           <ion-item>
             <ion-label>
-            <h3 class="title">{{ producto.descripcion }}</h3>
-            <p class="subtext">
-            {{'Categoria : ' + producto.categoria.descripcion + ' - Precio : ' +
-            producto.precio + ' - Cantidad : ' + producto.cantidad }}
-            </p>
+            <h3 class="title">{{ categoria.descripcion }}</h3>
             </ion-label>
           </ion-item>
           <ion-item-options side="end">
-            <ion-button color="success" (click)="editar2(producto)">EDITAR</ion-button>
-            <ion-button color="danger" (click)="eliminar(producto.idproducto)">ELIMINAR</ion-button>
+            <ion-button color="success" (click)="editar2(categoria)">EDITAR CATEGORIA</ion-button>
+            <ion-button color="danger" (click)="eliminar(categoria.idcategoria)">ELIMINAR CATEGORIA</ion-button>
           </ion-item-options>
         </ion-item-sliding>
 
