--- a/src/app/cliente/cliente.page.html
+++ b/src/app/cliente/cliente.page.html
@@ -3,7 +3,7 @@
   <ion-buttons slot="start">
   <ion-menu-button></ion-menu-button>
   </ion-buttons>
-  <ion-title>Producto</ion-title>
+  <ion-title>Cliente</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -11,7 +11,7 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-    <ion-title>LISTADO DE PRODUCTOS</ion-title>
+    <ion-title>LISTADO DE CLIENTES</ion-title>
     </ion-toolbar>
   </ion-header>
   <div id="container">
@@ -24,19 +24,18 @@
              </ion-button >
            </ion-buttons>
         </ion-item>
-        <ion-item-sliding *ngFor="let producto of productos">
+        <ion-item-sliding *ngFor="let cliente of clientes">
           <ion-item>
             <ion-label>
-            <h3 class="title">{{ producto.descripcion }}</h3>
+            <h3 class="title">{{'Dni: '+ cliente.dni }}</h3>
             <p class="subtext">
-            {{'Categoria : ' + producto.categoria.descripcion + ' - Precio : ' +
-            producto.precio + ' - Cantidad : ' + producto.cantidad }}
+            {{'Nombre : ' + cliente.nombre + ' '+' - Apellido : ' +cliente.apellido }}
             </p>
             </ion-label>
           </ion-item>
           <ion-item-options side="end">
-            <ion-button color="success" (click)="editar2(producto)">EDITAR</ion-button>
-            <ion-button color="danger" (click)="eliminar(producto.idproducto)">ELIMINAR</ion-button>
+            <ion-button color="success" (click)="editar2(cliente)">EDITAR</ion-button>
+            <ion-button color="danger" (click)="eliminar(cliente.idcliente)">ELIMINAR</ion-button>
           </ion-item-options>
         </ion-item-sliding>
 
