--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -16,10 +16,10 @@
 
     <ion-content>
       <ion-list>
-      <ion-item routerLink="/home" >Home</ion-item>
+      <ion-item routerLink="/categoria" >Categoria</ion-item>
       <ion-item routerLink="/producto">Producto</ion-item>
-      <ion-item routerLink="/contact">Contacto</ion-item>
+      <ion-item routerLink="/cliente">Cliente</ion-item>
       </ion-list>
     </ion-content>
-  
+
 </ion-content>
