--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,16 +5,23 @@
         <ion-title>Menú Principal</ion-title>
       </ion-toolbar>
     </ion-header>
-    <ion-content>
-      <ion-list>
-      <ion-item routerLink="/Categoria" color="yellow">Home</ion-item>
-      <ion-item routerLink="/Producto">Producto</ion-item>
-      <ion-item routerLink="/Cliente">Cliente</ion-item>
-      </ion-list>
-    </ion-content>
+
   </ion-menu>
   <div class="ion-page" id="main-content">
     <ion-router-outlet></ion-router-outlet>
   </div>
-
+  <ion-tabs>
+    <!-- Tab bar -->
+    <ion-tab-bar slot="bottom">
+      <ion-tab-button tab="Categoria" routerLink="/categoria">
+        <ion-icon name="person"></ion-icon>
+      </ion-tab-button>
+      <ion-tab-button tab="Producto" routerLink="/producto">
+        <ion-icon name="grid-outline"></ion-icon>
+      </ion-tab-button>
+      <ion-tab-button tab="Cliente" routerLink="/cliente">
+        <ion-icon name="cart"></ion-icon>
+      </ion-tab-button>
+    </ion-tab-bar>
+  </ion-tabs>
 </ion-app>
